Move to slf4j and some auto improvements